--- a/Planifier un examen/index.html
+++ b/Planifier un examen/index.html
@@ -4,53 +4,206 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planning des examens</title>
+    <title>Planifier</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://unpkg.com/vue@next" defer></script>
     <script src="app.js" defer></script>
 </head>
 <body>
-    <div class="leftbare">
-        <div class="logo">
-            <ion-icon name="settings-outline"></ion-icon>
-            <h1>Planning des examens</h1>
-        </div>
-        <div class="elements" id="elements">
-            <div class="menu">
-                <h2>MENU</h2>
-                <div class="button up">
-                    <ion-icon name="apps-outline"></ion-icon>
-                    <h3>Dashbord</h3>
-                </div>
+    <div class="container">
+        <section class="navbare" id="navbare">
+            <div class="top">
+                <ion-icon name="settings-outline"></ion-icon>
+                <h1>Planifier un examen</h1>
+            </div>
+            <div class="buttons">
+                <h3>Palier</h3>
                 <div class="button">
-                    <a href="Planifier.html">
-                        <ion-icon name="add-outline"></ion-icon>
-                        <h3>Planifier</h3>
-                    </a>
+                    <div class="scrollnav">
+                        <div class="Npalier">
+                            <div class="headerB">
+                                <p>License</p>
+                                <ion-icon name="caret-down-circle-outline" @click="showpalierL"></ion-icon>
+                            </div>
+                            <div class="specialites" :class="showP_L">
+                                <div class="Nspeacialite">
+                                    <div class="Hspecialite">
+                                        <p>License académique</p>
+                                        <ion-icon name="caret-down-circle-outline" @click="showspecialiteA"></ion-icon>
+                                    </div>
+                                    <div class="Palier" :class="showS_A">
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline" ></ion-icon>
+                                            <p>L2</p>
+                                        </div>
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                                            <p>L3</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="Nspeacialite">
+                                    <div class="Hspecialite">
+                                        <p>License académique</p>
+                                        <ion-icon name="caret-down-circle-outline" @click="showspecialiteI"></ion-icon>
+                                    </div>
+                                    <div class="Palier" :class="showS_I">
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline" ></ion-icon>
+                                            <p>L2</p>
+                                        </div>
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                                            <p>L3</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="Nspeacialite">
+                                    <div class="Hspecialite">
+                                        <p>License académique</p>
+                                        <ion-icon name="caret-down-circle-outline" @click="showspecialiteR"></ion-icon>
+                                    </div>
+                                    <div class="Palier" :class="showS_R">
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline" ></ion-icon>
+                                            <p>L2</p>
+                                        </div>
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                                            <p>L3</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="Npalier">
+                            <div class="headerB">
+                                <p>Master</p>
+                                <ion-icon name="caret-down-circle-outline" @click="showpalierM"></ion-icon>
+                            </div>
+                            <div class="specialites" :class="showP_M">
+                                <div class="Nspeacialite">
+                                    <div class="Hspecialite">
+                                        <p>Master 1</p>
+                                        <ion-icon name="caret-down-circle-outline" @click="showspecialiteM0"></ion-icon>
+                                    </div>
+                                    <div class="Palier" :class="showS_M1">
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline" ></ion-icon>
+                                            <p>L2</p>
+                                        </div>
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                                            <p>L3</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="Nspeacialite">
+                                    <div class="Hspecialite">
+                                        <p>Master 1</p>
+                                        <ion-icon name="caret-down-circle-outline" @click="showspecialiteM1"></ion-icon>
+                                    </div>
+                                    <div class="Palier" :class="showS_M2">
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline" ></ion-icon>
+                                            <p>L2</p>
+                                        </div>
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                                            <p>L3</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="Nspeacialite">
+                                    <div class="Hspecialite">
+                                        <p>Master 1</p>
+                                        <ion-icon name="caret-down-circle-outline" @click="showspecialiteM2"></ion-icon>
+                                    </div>
+                                    <div class="Palier" :class="showS_M3">
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline" ></ion-icon>
+                                            <p>L2</p>
+                                        </div>
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                                            <p>L3</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="Nspeacialite">
+                                    <div class="Hspecialite">
+                                        <p>Master 1</p>
+                                        <ion-icon name="caret-down-circle-outline" @click="showspecialiteM3"></ion-icon>
+                                    </div>
+                                    <div class="Palier" :class="showS_M4">
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline" ></ion-icon>
+                                            <p>L2</p>
+                                        </div>
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                                            <p>L3</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="Nspeacialite">
+                                    <div class="Hspecialite">
+                                        <p>Master 1</p>
+                                        <ion-icon name="caret-down-circle-outline" @click="showspecialiteM4"></ion-icon>
+                                    </div>
+                                    <div class="Palier" :class="showS_M5">
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline" ></ion-icon>
+                                            <p>L2</p>
+                                        </div>
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                                            <p>L3</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="Nspeacialite">
+                                    <div class="Hspecialite">
+                                        <p>Master 1</p>
+                                        <ion-icon name="caret-down-circle-outline" @click="showspecialiteM5"></ion-icon>
+                                    </div>
+                                    <div class="Palier" :class="showS_M6">
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline" ></ion-icon>
+                                            <p>L2</p>
+                                        </div>
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                                            <p>L3</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="Nspeacialite">
+                                    <div class="Hspecialite">
+                                        <p>Master 1</p>
+                                        <ion-icon name="caret-down-circle-outline" @click="showspecialiteM6"></ion-icon>
+                                    </div>
+                                    <div class="Palier" :class="showS_M7">
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline" ></ion-icon>
+                                            <p>L2</p>
+                                        </div>
+                                        <div class="NPalier">
+                                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                                            <p>L3</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="button">
-                    <ion-icon name="calendar-number-outline"></ion-icon>
-                    <h3>Calender</h3>
-                </div>
+                
             </div>
-        </div>
-    </div>
-    <div class="main">
-        <div class="profile" id="profile">
-            <div class="image" @click="showprofile">
-                <ion-icon name="person-outline"></ion-icon>
-            </div>
-            <div class="profilepage" :class="showpf">
-                <div class="personalinfo" >
-                    <p>Oussama</p>
-                    <p>Ighil Guitoun</p>
-                </div>
-                <div class="logout">
-                    <p>Logout</p>
-                    <ion-icon name="log-in-outline"></ion-icon>
-                </div>
-            </div>
-        </div>
+        </section>    
+        <section class="menu">
+            
+        </section>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
