--- a/Planifier un examen/planexam.html
+++ b/Planifier un examen/planexam.html
@@ -29,13 +29,13 @@
         <section class="menu">
             <div class="cardModify">
                 <form action="">
-                    <div class="module">
+                    <div class="card module">
                         <h2>Module :</h2>
                         <select name="module" id="module">
                             <option value="Nmodule">Algorithme</option>
                         </select>
                     </div>
-                    <div class="creneau">
+                    <div class="card creneau">
                         <h2>Les créneaux disponibles:</h2>
                         <select name="créneau" id="créneau">
                             <option value="Ncreneau">2022-15-20 10:30</option>
@@ -45,19 +45,39 @@
                         </select>
                     </div>
                     <div class="salle">
-                        <h2>Les salles disponibles:</h2>
-                        <select name="salle" id="salle" multiple>
-                            <option value="Nsalle">221</option>
-                            <option value="Nsalle">223</option>
-                            <option value="Nsalle">225</option>
-                            <option value="Nsalle">227</option>
-                            <option value="Nsalle">225</option>
-                            <option value="Nsalle">227</option>
-                            <option value="Nsalle">225</option>
-                            <option value="Nsalle">227</option>
-                            <option value="Nsalle">225</option>
-                            <option value="Nsalle">227</option>
-                        </select>
+                        <h2>Les salles disponibles:</h2>                           
+                            <div class="scroll">
+                                <div class="checkbox">
+                                    <div class="label">
+                                        <label for="room">223</label>
+                                        <input type="checkbox" name="" id="room">  
+                                    </div>
+                                    <div class="label">
+                                        <label for="room">223</label>
+                                        <input type="checkbox" name="" id="room">  
+                                    </div>
+                                    <div class="label">
+                                        <label for="room">223</label>
+                                        <input type="checkbox" name="" id="room">  
+                                    </div>
+                                    <div class="label">
+                                        <label for="room">223</label>
+                                        <input type="checkbox" name="" id="room">  
+                                    </div>
+                                    <div class="label">
+                                        <label for="room">223</label>
+                                        <input type="checkbox" name="" id="room">  
+                                    </div>
+                                    <div class="label">
+                                        <label for="room">223</label>
+                                        <input type="checkbox" name="" id="room">  
+                                    </div>
+                                    <div class="label">
+                                        <label for="room">223</label>
+                                        <input type="checkbox" name="" id="room">  
+                                    </div>
+                                </div>
+                            </div>
                     </div>
                     <button type="submit">Terminer</button>
                 </form>
