--- a/Planifier un examen/index.html
+++ b/Planifier un examen/index.html
@@ -23,7 +23,7 @@
                         <p>Planifier un examen</p>
                     </div>
                     </a>
-                    <a href="">
+                    <a href="consultermodule.html">
                         <div class="action">
                             <ion-icon name="eye-outline"></ion-icon>
                             <p>Consulter</p>
