--- a/Planifier un examen/consultermodule.html
+++ b/Planifier un examen/consultermodule.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planifier</title>
     <link rel="stylesheet" href="consultermodule.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.debug.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
+    <script src="generer.js"></script>
 </head>
 <body>
     <div class="container">
@@ -40,145 +43,147 @@
             </div>
         </section>
         <section class="menu">
-            <div class="table">
-                <div class="title">
-                    <div class="info">
-                        <h1 class="green">Palier:</h1>
-                        <h1>L2</h1>
+            <div class="table" id="table">
+                <div class="print" id="print">
+                    <div class="title">
+                        <div class="info">
+                            <h1 class="green">Palier:</h1>
+                            <h1>L2</h1>
+                        </div>
+                        <div class="info">
+                            <h1 class="green">Section: </h1>
+                            <h1>ACAB_B</h1>
+                        </div>
                     </div>
-                    <div class="info">
-                        <h1 class="green">Section: </h1>
-                        <h1>ACAB_B</h1>
+                    <div class="thead top">
+                        <div class="box one">
+                            <h2>Date</h2>
+                        </div>
+                        <div class="box">
+                            <h2>Créneau</h2>
+                        </div>
+                        <div class="box">
+                            <h2>Module</h2>
+                        </div>
+                        <div class="box">
+                            <h2>Local</h2>
+                        </div>
                     </div>
-                </div>
-                <div class="thead">
-                    <div class="box one">
-                        <h2>Date</h2>
+                    <div class="thead two">
+                        <div class="box one">
+                            <h2>2022-15-02</h2>
+                        </div>
+                        <div class="box">
+                            <h2>10:15</h2>
+                        </div>
+                        <div class="box">
+                            <h2>ALGO</h2>
+                        </div>
+                        <div class="box">
+                            <h2>313+151+120</h2>
+                        </div>
                     </div>
-                    <div class="box">
-                        <h2>Créneau</h2>
+                    <div class="thead two">
+                        <div class="box one">
+                            <h2>2022-15-02</h2>
+                        </div>
+                        <div class="box">
+                            <h2>10:15</h2>
+                        </div>
+                        <div class="box">
+                            <h2>ALGO</h2>
+                        </div>
+                        <div class="box">
+                            <h2>313</h2>
+                        </div>
                     </div>
-                    <div class="box">
-                        <h2>Module</h2>
+                    <div class="thead two">
+                        <div class="box one">
+                            <h2>2022-15-02</h2>
+                        </div>
+                        <div class="box">
+                            <h2>10:15</h2>
+                        </div>
+                        <div class="box">
+                            <h2>ALGO</h2>
+                        </div>
+                        <div class="box">
+                            <h2>313</h2>
+                        </div>
                     </div>
-                    <div class="box">
-                        <h2>Local</h2>
+                    <div class="thead two">
+                        <div class="box one">
+                            <h2>2022-15-02</h2>
+                        </div>
+                        <div class="box">
+                            <h2>10:15</h2>
+                        </div>
+                        <div class="box">
+                            <h2>ALGO</h2>
+                        </div>
+                        <div class="box">
+                            <h2>313</h2>
+                        </div>
                     </div>
-                </div>
-                <div class="thead two">
-                    <div class="box one">
-                        <h2>2022-15-02</h2>
+                    <div class="thead two">
+                        <div class="box one">
+                            <h2>2022-15-02</h2>
+                        </div>
+                        <div class="box">
+                            <h2>10:15</h2>
+                        </div>
+                        <div class="box">
+                            <h2>ALGO</h2>
+                        </div>
+                        <div class="box">
+                            <h2>313</h2>
+                        </div>
                     </div>
-                    <div class="box">
-                        <h2>10:15</h2>
+                    <div class="thead two">
+                        <div class="box one">
+                            <h2>2022-15-02</h2>
+                        </div>
+                        <div class="box">
+                            <h2>10:15</h2>
+                        </div>
+                        <div class="box">
+                            <h2>ALGO</h2>
+                        </div>
+                        <div class="box">
+                            <h2>313</h2>
+                        </div>
                     </div>
-                    <div class="box">
-                        <h2>ALGO</h2>
+                    <div class="thead two">
+                        <div class="box one">
+                            <h2>2022-15-02</h2>
+                        </div>
+                        <div class="box">
+                            <h2>10:15</h2>
+                        </div>
+                        <div class="box">
+                            <h2>ALGO</h2>
+                        </div>
+                        <div class="box">
+                            <h2>313</h2>
+                        </div>
                     </div>
-                    <div class="box">
-                        <h2>313+151+120</h2>
-                    </div>
-                </div>
-                <div class="thead two">
-                    <div class="box one">
-                        <h2>2022-15-02</h2>
-                    </div>
-                    <div class="box">
-                        <h2>10:15</h2>
-                    </div>
-                    <div class="box">
-                        <h2>ALGO</h2>
-                    </div>
-                    <div class="box">
-                        <h2>313</h2>
-                    </div>
-                </div>
-                <div class="thead two">
-                    <div class="box one">
-                        <h2>2022-15-02</h2>
-                    </div>
-                    <div class="box">
-                        <h2>10:15</h2>
-                    </div>
-                    <div class="box">
-                        <h2>ALGO</h2>
-                    </div>
-                    <div class="box">
-                        <h2>313</h2>
-                    </div>
-                </div>
-                <div class="thead two">
-                    <div class="box one">
-                        <h2>2022-15-02</h2>
-                    </div>
-                    <div class="box">
-                        <h2>10:15</h2>
-                    </div>
-                    <div class="box">
-                        <h2>ALGO</h2>
-                    </div>
-                    <div class="box">
-                        <h2>313</h2>
-                    </div>
-                </div>
-                <div class="thead two">
-                    <div class="box one">
-                        <h2>2022-15-02</h2>
-                    </div>
-                    <div class="box">
-                        <h2>10:15</h2>
-                    </div>
-                    <div class="box">
-                        <h2>ALGO</h2>
-                    </div>
-                    <div class="box">
-                        <h2>313</h2>
-                    </div>
-                </div>
-                <div class="thead two">
-                    <div class="box one">
-                        <h2>2022-15-02</h2>
-                    </div>
-                    <div class="box">
-                        <h2>10:15</h2>
-                    </div>
-                    <div class="box">
-                        <h2>ALGO</h2>
-                    </div>
-                    <div class="box">
-                        <h2>313</h2>
-                    </div>
-                </div>
-                <div class="thead two">
-                    <div class="box one">
-                        <h2>2022-15-02</h2>
-                    </div>
-                    <div class="box">
-                        <h2>10:15</h2>
-                    </div>
-                    <div class="box">
-                        <h2>ALGO</h2>
-                    </div>
-                    <div class="box">
-                        <h2>313</h2>
-                    </div>
-                </div>
-                <div class="thead two">
-                    <div class="box one">
-                        <h2>2022-15-02</h2>
-                    </div>
-                    <div class="box">
-                        <h2>10:15</h2>
-                    </div>
-                    <div class="box">
-                        <h2>ALGO</h2>
-                    </div>
-                    <div class="box">
-                        <h2>313</h2>
+                    <div class="thead two">
+                        <div class="box one">
+                            <h2>2022-15-02</h2>
+                        </div>
+                        <div class="box">
+                            <h2>10:15</h2>
+                        </div>
+                        <div class="box">
+                            <h2>ALGO</h2>
+                        </div>
+                        <div class="box">
+                            <h2>313</h2>
+                        </div>
                     </div>
                 </div>
                 <div class="generate">
-                    <button>Générer</button>
+                    <button onclick="generatePDF()" id="buttongenerer">Générer</button>
                 </div>
         </section>
     </div>
