--- a/Planifier un examen/index.html
+++ b/Planifier un examen/index.html
@@ -41,8 +41,107 @@
             </div>
         </section>    
         <section class="menu">
+            <div class="boxes">
+                <div class="idbox">
+                    <div class="boxicon">
+                        <ion-icon name="document-outline"></ion-icon>
+                    </div>
+                    <div class="icontext">
+                        <p class="number">105</p>
+                        <p class="nameun">Modules</p>
+                    </div>
+                </div>
+                <div class="idbox">
+                    <div class="boxicon">
+                        <ion-icon name="browsers-outline"></ion-icon>
+                    </div>
+                    <div class="icontext">
+                        <p class="number">105</p>
+                        <p class="nameun two">Salles</p>
+                    </div>
+                </div>
+                <div class="idbox">
+                    <div class="boxicon">
+                        <ion-icon name="people-outline"></ion-icon>
+                    </div>
+                    <div class="icontext">
+                        <p class="number">105</p>
+                        <p class="nameun three">Surveillants</p>
+                    </div>
+                </div>
+                <div class="idbox">
+                    <div class="boxicon">
+                        <ion-icon name="school-outline"></ion-icon>
+                    </div>
+                    <div class="icontext">
+                        <p class="number">105</p>
+                        <p class="nameun four">Département</p>
+                    </div>
+                </div>
+            </div>
+            <div class="charts">
+                <div class="chart">
+                    <canvas id="myChart"></canvas>
+                </div>
+                <div class="chart">
+                    <canvas id="myChart2"></canvas>
+                </div>
+            </div>
         </section>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
+   <script>
+       const ctx = document.getElementById('myChart').getContext('2d');
+       const Mychart = new Chart(ctx, {
+        type: 'pie',
+        data:{
+            labels: [
+            'Red',
+            'Blue',
+            'Yellow'
+            ],
+        datasets: [{
+            label: 'My First Dataset',
+            data: [300, 50, 100],
+            backgroundColor: [
+            '#3DD984',
+            '#1D6F42',
+            '#113E25'
+            ],
+            hoverOffset: 4
+        }]
+        },
+        options: {
+                responsive: true,
+                maintainAspectRatio: false,
+            }
+       });
+       const ctx2 = document.getElementById('myChart2').getContext('2d');
+       const Mychart2 = new Chart(ctx2, {
+        type: 'doughnut',
+        data:{
+            labels: [
+            'Red',
+            'Blue',
+            'Yellow'
+            ],
+        datasets: [{
+            label: 'My First Dataset',
+            data: [300, 50, 100],
+            backgroundColor: [
+            '#113E25',
+            '#1D6F42',
+            '#3DD984'
+            ],
+            hoverOffset: 4
+        }]
+        },
+        options: {
+                responsive: true,
+                maintainAspectRatio: false,
+            }
+       });
+   </script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <style>
