--- a/Planifier un examen/planexam.html
+++ b/Planifier un examen/planexam.html
@@ -28,7 +28,7 @@
         </section>
         <section class="menu">
             <div class="cardModify">
-                <form action="">
+                <form action="" id="form" method="post">
                     <div class="card module">
                         <h2>Module :</h2>
                         <select name="module" id="module">
@@ -53,28 +53,28 @@
                                         <input type="checkbox" name="" id="room">  
                                     </div>
                                     <div class="label">
-                                        <label for="room">223</label>
-                                        <input type="checkbox" name="" id="room">  
+                                        <label for="room1">223</label>
+                                        <input type="checkbox" name="room" id="room1">  
                                     </div>
                                     <div class="label">
                                         <label for="room">223</label>
-                                        <input type="checkbox" name="" id="room">  
+                                        <input type="checkbox" name="room" id="room">  
                                     </div>
                                     <div class="label">
                                         <label for="room">223</label>
-                                        <input type="checkbox" name="" id="room">  
+                                        <input type="checkbox" name="room" id="room">  
                                     </div>
                                     <div class="label">
                                         <label for="room">223</label>
-                                        <input type="checkbox" name="" id="room">  
+                                        <input type="checkbox" name="room" id="room">  
                                     </div>
                                     <div class="label">
                                         <label for="room">223</label>
-                                        <input type="checkbox" name="" id="room">  
+                                        <input type="checkbox" name="room" id="room">  
                                     </div>
                                     <div class="label">
                                         <label for="room">223</label>
-                                        <input type="checkbox" name="" id="room">  
+                                        <input type="checkbox" name="room" id="room">  
                                     </div>
                                 </div>
                             </div>
@@ -88,6 +88,16 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
+        
     </style>
+    <script>
+        var form=document.getElementById("form")
+        form.onsubmit=function(e){
+                console.log('SSSSSSSSSSSsssss')
+                e.preventdefault()
+                return false;
+        }
+    </script>
 </body>
 </html>
